fix on mobile

--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
     min-height: 100vh;
     color: #fff;
     background: linear-gradient(45deg, #1b1b1f, #34343b);
-    max-width: 100%;
 }
 
 a:link,
@@ -57,24 +56,11 @@ a:active {
 }
 
 .content {
-    flex: 1;
-    display: flex;
     text-align: center;
     justify-content: center;
     margin-top: 2%;
     margin-bottom: 2%;
-    max-width: 100%;
-}
-
-.footer {
-    background-color: #222;
-    text-align: center;
-}
-
-.footer a {
-    color: #fff;
-    text-decoration: none;
-    padding: 0 10px;
+    overflow-wrap: break-word;
 }
 
 .mini-icon {
@@ -96,4 +82,8 @@ a:active {
     -webkit-text-fill-color: transparent;
     background-image: linear-gradient(45deg,#ff0000,#ac0000, #ff0000);
     text-shadow: 0px 0px 10px rgba(161, 0, 0, 0.6);
+}
+
+img {
+    max-width:100%;
 }
